@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2009-2019 by Walter Brisken                             *
+ *   Copyright (C) 2009-2021 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -971,7 +971,6 @@ int DatastreamSetup::setkv(const std::string &key, const std::string &value)
 
 		ss >> t;
 		threadsAbsent.insert(t);
-std::cout << "ABSENT: " << t << " " << threadsAbsent.size() << std::endl;
 	}
 	else if(key == "threadsIgnore" || key == "threadIgnore")
 	{
@@ -979,7 +978,6 @@ std::cout << "ABSENT: " << t << " " << threadsAbsent.size() << std::endl;
 
 		ss >> t;
 		threadsIgnore.insert(t);
-std::cout << "IGNORE: " << t << std::endl;
 	}
 	else
 	{
